# assignment1-basics

./: .gitignore  Cargo.toml  pyproject.toml
cs336_basics/: embedding.py  encoding.py  linear.py  merge.py  mhas_attention.py  pretokenization.py  pretokenization_example.py  rmsnorm.py  rope.py  utility.py
src/: lib.rs
tests/: adapters.py
